[gd_scene load_steps=7 format=2]

[ext_resource path="res://PetCare.gd" type="Script" id=1]
[ext_resource path="res://pet-main.png" type="Texture" id=2]
[ext_resource path="res://new_styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://new_styleboxflat_pink.tres" type="StyleBox" id=4]
[ext_resource path="res://new_styleboxflat_mint.tres" type="StyleBox" id=5]
[ext_resource path="res://Kalam/Kalam-Regular.tres" type="DynamicFont" id=6]

[node name="RootNode" type="Node2D"]
script = ExtResource( 1 )

[node name="NoodleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="UI" type="Node2D" parent="."]

[node name="FeedButton" type="Button" parent="UI"]
margin_left = 10.0
margin_top = 1070.0
margin_right = 710.0
margin_bottom = 1170.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Feed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetButton" type="Button" parent="UI"]
margin_left = 10.0
margin_top = 1180.0
margin_right = 710.0
margin_bottom = 1280.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Get noodles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pet" type="Sprite" parent="UI"]
position = Vector2( 360, 600 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="HungerLabel" type="Label" parent="UI"]
margin_left = 50.0
margin_top = 980.0
margin_right = 167.0
margin_bottom = 1113.0
custom_fonts/font = ExtResource( 6 )
text = "Hunger
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoodleLabel" type="Label" parent="UI"]
margin_left = 50.0
margin_top = 920.0
margin_right = 178.0
margin_bottom = 1053.0
custom_fonts/font = ExtResource( 6 )
text = "Noodles
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="NoodleTimer" to="." method="_on_NoodleTimer_timeout"]
[connection signal="pressed" from="UI/FeedButton" to="." method="_on_FeedButton_pressed"]
[connection signal="pressed" from="UI/GetButton" to="." method="_on_GetButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
